Added TLS Redis Support